--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!--<iframe src="forest.html" allowfullscreen></iframe>-->
     <div id="credits">
-        <p>&copy; Made by Simon Tirant (alias Sancxo).</p>
+        <p>&copy; Made by Simon Tirant (alias Sancxo)</p>
         <a href="https://github.com/Sancxo" target="_blank" title="See my GitHub profile"><button>GitHub</button></a>
     </div>
     <div id="credits2">
