Return button added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!--<iframe src="forest.html" allowfullscreen></iframe>-->
     <div id="credits">
         <p>&copy; Made by Simon Tirant (alias Sancxo)</p>
+        <a href="https://sancxo.github.io" title="Return to the site"><button>Retour au site</button></a>
         <a href="https://github.com/Sancxo" target="_blank" title="See my GitHub profile"><button>GitHub</button></a>
     </div>
     <div id="credits2">
